@@ -83,9 +83,35 @@ RAK3172_Error_t RAK3172_GetHWID(const RAK3172_t* const p_Device, std::string* co
     return RAK3172_SendCommand(p_Device, "AT+HWID=?", p_ID);
 }
 
-RAK3172_Error_t RAK3172_GetHWID(const RAK3172_t* const p_Device, uint32_t Period)
+RAK3172_Error_t RAK3172_Sleep(const RAK3172_t* const p_Device, uint32_t Duration)
 {
-    return RAK3172_SendCommand(p_Device, "AT+SLEEP=" + std::to_string(Period));
+    return RAK3172_SendCommand(p_Device, "AT+SLEEP=" + std::to_string(Duration));
+}
+
+RAK3172_Error_t RAK3172_Lock(const RAK3172_t* const p_Device, std::string Password)
+{
+    if((Password.length() < 1) || (Password.length() > 8))
+    {
+        return RAK3172_ERR_INVALID_ARG;
+    }
+
+    RAK3172_ERROR_CHECK(RAK3172_SendCommand(p_Device, "AT+PWORD=" + Password));
+
+    uart_write_bytes(p_Device->Interface, "AT+LOCK\r\n", std::string("AT+LOCK\r\n").length());
+
+    return RAK3172_ERR_FAIL;
+}
+
+RAK3172_Error_t RAK3172_Unlock(const RAK3172_t* const p_Device, std::string Password)
+{
+    if((p_Device == NULL) || (Password.length() < 1) || (Password.length() > 8))
+    {
+        return RAK3172_ERR_INVALID_ARG;
+    }
+
+    uart_write_bytes(p_Device->Interface, Password.c_str(), Password.length());
+
+    return RAK3172_ERR_FAIL;
 }
 
 #endif
